force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Enrolement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>