force-app/main/default/objects/Student__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Experience</label>
    <type>Checkbox</type>
</CustomField>