force-app/main/default/objects/Student__c/fields/Module_Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Module_Start_Date_and_Time__c</fullName>
    <label>Module Start Date and Time</label>
    <type>DateTime</type>
</CustomField>