force-app/main/default/objects/Student__c/fields/SessionName__c.field-meta.xml
<CustomField>
    <fullName>SessionName__c</fullName>
    <label>Session Name</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>