force-app/main/default/objects/Student__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>